bridges/jac-bridge/tests/ui/unsupported_param_type.stderr
error: unsupported bridge type: `char`
 --> tests/ui/unsupported_param_type.rs:9:30
  |
9 |         pub fn bad(&self, x: char) -> bool {
  |                              ^^^^
